--- a/resume.css
+++ b/resume.css
@@ -1,32 +1,70 @@
-/* style overrides  */
+body { 
+    font-family: Georgia; color: #444; zoom: 80%; margin-left:10%; margin-right: 10%;  }
+.inner { 
+    padding: 10px 80px; 
+    
+    background: #f5f5f5; 
+    border-top: solid #666;
+    border-width: 8px 0 2px 0; 
 
-body { font-family: Georgia; color: #444; zoom: 80%; margin-left:10%; margin-right: 10%; }
-#inner { padding: 10px 80px; margin: 80px auto; background: #f5f5f5; border: solid #666; border-width: 8px 0 2px 0; }
-.yui-gf { margin-bottom: 2em; padding-bottom: 2em; border-bottom: 1px solid #ccc; }
+}
+.section { 
+    border-top:  1px solid #ccc; 
+}
 
-/* header, body, footer */
-#hd { margin: 2.5em 0 3em 0; padding-bottom: 1.5em; border-bottom: 1px solid #ccc }
-#hd h2 { text-transform: uppercase; letter-spacing: 2px; }
-#bd, #ft { margin-bottom: 2em; }
+h1 {
+    font-size: 38px;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+}
 
-/* footer */
-#ft { padding: 1em 0 5em 0; font-size: 92%; border-top: 1px solid #ccc; text-align: center; }
-#ft p { margin-bottom: 0; text-align: center;   }
+h2 {
+    font-style: italic;
+     font-size: 34px;
+}
 
-#hd h1 { font-size: 38px; text-transform: uppercase; letter-spacing: 3px; }
-h2 { font-size: 34px }
-h3, h4 { font-size: 122%; }
-h1, h2, h3, h4 { color: #333; }
-img {border-radius: 150px; 
+h3, h4 {
+    font-size: 122%; 
+}
+
+h1, h2, h3, h4 { 
+    color: #333; 
+}
+
+p { font-size: 25px;
+    line-height: 30px; 
+    padding-right: 3em;  
+}
+
+pre{ font-size: 25px
+
+}
+
+li {
+    list-style-type: none; 
+   }
+   
+footer{
+    background: #f5f5f5;
+    border-bottom: solid #666;
+}
+
+td{
+    width:"50";
+}
+.avatar{border-radius: 150px; 
     border: 3px solid rgba(0, 0, 0, 0); 
     box-shadow: 0 0 7px #666; 
-    margin: auto; }
-p { font-size: 25px; line-height: 30px; padding-right: 3em;  }
-pre{ font-size: 25px}
-strong { font-weight: bold; }
-.first h2 { font-style: italic; }
-.last { border-bottom: 0 }
+    margin: center;
+width: 15%;}
 
+.footer_img{width: 50px; height: 50px;
+}
 
-.yui-gf .yui-u{width:80.2%;}
-.yui-gf div.first{width:17.3%;}
+.click{
+    color:rgb(194, 188, 183);
+ }
+
+.click:hover{
+    color:rgb(3, 0, 0);
+ }
