--- a/resume.css
+++ b/resume.css
@@ -1,8 +1,9 @@
 body { 
-    font-family: Georgia; color: #444; zoom: 80%; margin-left:10%; margin-right: 10%;  }
+    font-family: Georgia; color: #444; zoom: 80%; margin-left:10%; margin-right: 10%;  
+}
+
 .inner { 
     padding: 10px 80px; 
-    
     background: #f5f5f5; 
     border-top: solid #666;
     border-width: 8px 0 2px 0; 
@@ -36,27 +37,30 @@ p { font-size: 25px;
     padding-right: 3em;  
 }
 
+.skills{
+    font-size: 25px;
+    margin-left: 2%;
+}
+
 pre{ font-size: 25px
 
 }
 
-li {
-    list-style-type: none; 
-   }
-   
+table{
+    padding: 5px ;
+    margin: auto ;   
+}
+ 
 footer{
     background: #f5f5f5;
     border-bottom: solid #666;
 }
 
-td{
-    width:"50";
-}
 .avatar{border-radius: 150px; 
-    border: 3px solid rgba(0, 0, 0, 0); 
+    border: 3px solid rgba(43, 35, 35, 0); 
     box-shadow: 0 0 7px #666; 
-    margin: center;
-width: 15%;}
+    width: 15%;
+}
 
 .footer_img{width: 50px; height: 50px;
 }
